Table Customer {
  customer_id int [pk]
  email varchar [unique, not null]
  first_name varchar [not null]
  last_name varchar [not null]
  created_at datetime [default: `now()`]
}

Table Address {
  adress_id varchar [pk]
  customer_id int [not null]
  city_id  varcher [not null]
  country_id varchar [not null]
}

Table Category {
  category_id int [pk]
  category_name varchar [not null]
}

Table Product {
  product_id int [pk]
  category_id int [not null]
  category_name varchar [not null]
  price_id int [not null]
}

Table Order {
  order_id int [pk]  
  product_id int [not null]
  customer_id int [not null]
  order_date datetime [default: `now()`]
  status varchar [not null]
} 

Table OrderItem {
  order_item int [pk]
  order_id int [not null]
  product_id int [not null]
  quantity int [not null]
  unit_price decimal [not null]
}

Table Review {
  review_id int [pk]
  customer_id int [not null]
  product_id int [not null] 
  rating int [not null]
  comment varchar
  created_at datetime [default: `now()`]
}

Table Discount {
  discount_id int [pk]
  category_id int
  product_id int
  percentage decimal [not null]
  start_date date [not null]
  end_date date [not null]
}

// Relationships
Ref: Address.customer_id > Customer.customer_id
Ref: Product.category_id > Category.category_id
Ref: Order.product_id > Product.product_id
Ref: OrderItem.order_id > Order.order_id
Ref: OrderItem.product_id > Product.product_id
Ref: Order.customer_id > Customer.customer_id
Ref: Review.customer_id > Customer.customer_id
Ref: Review.product_id > Product.product_id
Ref: Discount.category_id > Category.category_id
Ref: Discount.product_id > Product.product_id



